# ai-trend-collector

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
docs/operations/: telegram-subscriber-period.md
docs/superpowers/plans/: 2026-06-26-ai-trend-telegram.md  2026-07-01-telegram-subscriber-period.md
docs/superpowers/specs/: 2026-06-26-ai-trend-telegram-design.md  2026-07-01-telegram-subscriber-period-design.md
src/aitrendigest/: cli.py  config.py  db.py  dedup.py  digest.py  logging.py  models.py  pipeline.py  repository.py  scoring.py  tagging.py  telegram.py  types.py
src/aitrendigest/collectors/: arxiv.py  base.py  github_trending.py  hf_models.py  hf_papers.py  rss.py  youtube.py
tests/: test_collectors.py  test_config.py  test_dedup.py  test_digest.py  test_pipeline.py  test_repository.py  test_scoring.py  test_telegram.py
